[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "James's Notebooks"
authors = ["James Thorniley <james.thorniley@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"
numpy = "^1.22.0"
scipy = "^1.4.1"
sphinx = "^3.0.2"
sphinx_material = "^0.0.26"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
flake8 = "^3.7.9"
ipympl = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
